--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -9,7 +9,9 @@
 		<%=sanitize product.description %>
 		<div class="price_line">
 		<span class="price"><%= number_to_currency(product.price) %></span>
-		<!-- formats the prixe as a currency -->
+		<!-- formats the price as a currency -->
+		<%= button_to 'Add to Cart', line_items_path(:product_id => product) %>
 		</div>
 	</div>
 <% end %>
+
